--- a/dav_svn.conf
+++ b/dav_svn.conf
@@ -10,4 +10,6 @@ LoadModule authz_svn_module /usr/lib/apache2/mod_authz_svn.so
      AuthUserFile /etc/subversion/passwd
      AuthzSVNAccessFile /etc/subversion/subversion-access-control
      Require valid-user
+     SVNCompressionLevel 0
+     SVNInMemoryCacheSize 262,144
   </Location>
